tweaked home-page fon h2s so there is a wide and a not-wide.  prevent text overflow.  Kind of hackey though.

--- a/stylesheets/_textAndDetailLayout.scss
+++ b/stylesheets/_textAndDetailLayout.scss
@@ -78,10 +78,24 @@ h4 a:visited {
 
 #nameContainer h2{
 	margin-left: 6%;
+	
+	&:nth-of-type(2){
+		margin-left: 30%;
+	}
 
 	//tab portrait
 	@media screen and (max-width: 768px) and (min-width: 200px){
 		max-width: 60%;
+	}
+}
+
+//wide screens
+@media screen and (min-width: 1000px){
+	#nameContainer h2{
+		display: none;
+	}
+	#nameContainer h2.wideOnly{
+		display: block;
 	}
 }
 
